# fs-uae

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  BASEVERSION.FS  ChangeLog  Changelog  INSTALL  ISSUES  Makefile  Makefile.am  Makefile.old  Makefile.py  PACKAGE.FS  README  README.md  STATUS  VERSION  a2065.cpp  a2091.cpp  akiko.cpp  amax.cpp  arcadia.cpp  audio.cpp  autoconf.cpp  blitter.cpp  blkdev.cpp  blkdev_cdimage.cpp  bootstrap  bootstrap-automake.sh  bootstrap.sh  bsdsocket.cpp  cd32_fmv.cpp  cdtv.cpp  cfgfile.cpp  cia.cpp  common.mk  configure-demoscene.sh  configure-minimal.sh  configure.ac  (+59 more)
.attic/: README.flatpak  STATUS  valgrind.supp
.circleci/: Dockerfile  config.yml
attic/: README  fs-uae.spec  net.fs_uae.FS-UAE.yaml
ci/: make_portable.sh
contrib/: sinc-integral.py
debian/: .gitignore  changelog  control  copyright
doc/: libtrace.md
docker/: Dockerfile  bootstrap.sh
docs/: .gitignore  Makefile  action-replay.md  amiga-forever.md  amigaos-4-1.md  amikit.md  base-dir.md  bridgeboard.md  build.py  compiling.md  cyberstorm-ppc.md  debugging.md  directories.md  environment-variables.md  faq.md  floppy-images.md  g-sync.md  gamecontrollerdb.md  getting-started.md  hard-drives.md  high-dpi.md  input-actions.md  input-mapping.md  issues.md  jit-compiler.md  joysticks.md  keyboard-joystick-emulation.md  keyboard-mapping.md  keyboard-shortcuts.md  keyboard.md  kickstarts.md  latency.md  linux.md  macos.md  midi.md  mouse.md  old-files.md  os-x.md  performance.md  picasso-iv.md  (+14 more)
floppybridge/: floppybridge_lib.cpp
fs/: .gitignore  Makefile.am  configure.ac
fs/src/: config.h.in
fsbuild/: .gitignore  Makefile  PACKAGE  VERSION  __init__.py  all  appify.sh  archive  bootstrap  build  build-dmg  bundle  bundle.inc.sh  bundle.sh  clean  common.inc.sh  common.sh  configure  deb-src  dist-xz  distcheck  distdir  dmg  download.py  make  notarize  obs-dist  plugin  plugin.post.sh  plugin.pre.sh  rebuild  sign  sign.py  source  standalone.py  system.sh  upload  version  version.py
fsdeps/: .gitignore  Makefile  arch.sh  bashrc  build  build.inc.sh  build.sh  clean  dep.sh  download.py  env  env.sh  fedora  linux.sh  macos.sh  make  rebuild  replace.py  system.sh  use
fsemu/: ReadMe.txt
fsplugin/: installdeps
gensrc/: blitfunc.cpp  blittable.cpp  cpudefs.cpp  cpuemu_0.cpp  cpuemu_11.cpp  cpuemu_12.cpp  cpuemu_13.cpp  cpuemu_20.cpp  cpuemu_21.cpp  cpuemu_22.cpp  cpuemu_31.cpp  cpuemu_32.cpp  cpuemu_33.cpp  cpustbl.cpp  cputbl.h  linetoscr.cpp
glad/: update
glee/: GLee.c  GLee.h
icon/: fs-uae-launcher.icns  fs-uae.icns
include/: a2091.h  audio.h  autoconf.h  blitter.h  blkdev.h  bsdsocket.h  commpipe.h  cpu_prefetch.h  cpummu.h  cpummu030.h  custom.h  debug.h  debugmem.h  drawing.h  events.h  execio.h  fake86_cpu.h  fpp-ieee-be.h  fpp.h  fsdb.h  fsusage.h  gfxboard.h  ide.h  idecontrollers.h  inputdevice.h  isofs.h  memory.h  mmu_common.h  moduleripper.h  native2amiga.h  ncr_scsi.h  newcpu.h  options.h  osemu.h  parallel.h  picasso96.h  readcpu.h  rommgr.h  scsi.h  sndboard.h  (+5 more)
jit/: codegen_x86.cpp  compemu.h  compemu_support.cpp  exception_handler.cpp  gencomp.cpp
launcher/: Makefile.mk  README  fs-uae-game-center.py  fs-uae-launcher.spec  setup.py  setup_py2app.py  setup_py2exe.py
libfsemu/: Makefile  README
libmpeg2/: Makefile.am  bootstrap  configure.ac
libnfd/: Makefile.in
m4/: ax_c___builtin_expect.m4
macosx/: Info.plist.in  Makefile  Makefile.in  fix-app.py  fs-make-standalone-app.py  fs-uae.icns  standalone.py
mame/: a2410.cpp
manymouse/: README.txt  macosx_hidutilities.c  windows_wminput.c
od-fs/: .gitignore  ChangeLog  Makefile  Portable.ini  README.md  ahi_v2.cpp  ahi_winuae.cpp  ahidsound_new.cpp  avioutput.h  blkdev-linux.cpp  bootstrap  bridge.cpp  bsdsocket_posix.cpp  cda_play.cpp  cda_play.h  cdimage_stubs.cpp  charset.cpp  config-fs.cpp  configure  defines.h  driveclick.cpp  filesys_host.cpp  fsdb_host.cpp  fsdb_host.h  fsvideo.cpp  gui.cpp  hardfile_host.cpp  input-fs.cpp  input.cpp  joystick.cpp  keyboard-fs.cpp  libamiga.cpp  libuae.cpp  libuae.h  midi.cpp  mman.cpp  mouse.cpp  mp3decoder.cpp  parser.cpp  paths.cpp  (+26 more)
od-win32/: bsdsock.cpp  cda_play.cpp  cda_play.h  clipboard_win32.cpp  direct3d.h  dxwrap.h  mman.cpp  picasso96_win.cpp  registry.h  render.h  serial_win32.cpp  sysconfig.h  win32.cpp  win32.h  win32_scaler.cpp  win32_uaenet.cpp  win32gfx.cpp  win32gfx.h  win32gui.cpp  win32gui.h
pcem/: 808x.cpp  cpu.h  dma.cpp  keyboard_at.cpp  model.h  mouse_ps2.h  pcemglue.cpp  pcemnvr.cpp  sound_cms.cpp  sound_cms.h  sound_dbopl.cpp  sound_sb.cpp  vid_mga.cpp  vid_permedia2.cpp  vid_s3_virge.cpp  vid_svga_render.cpp  vid_voodoo_banshee.cpp  video.h  x87.cpp
po/: cs.po  da.po  de.po  el.po  eo.po  es-ES.po  es.po  fi.po  fr.po  hu.po  it.po  nb.po  nl.po  pl.po  pt-BR.po  pt.po  pt_BR.po  ru.po  sr-CS.po  sr.po  sv.po  tr.po  update.py  update.sh
prowizard/: prowiz.c
qemuvga/: cirrus_vga.cpp  qemumemory.h  qemuuaeglue.h
server/: README  setup.py
slirp/: .gitignore  .gitlab-ci.yml  CHANGELOG.md  Makefile  config-host.h  meson.build
slirp/src/: ip6_icmp.c  ip_icmp.c  ip_input.c  libslirp-version.h  libslirp.map  misc.c  ncsi.c  slirp.c  slirp.h  socket.c  socket.h  tcp_input.c
snap/: snapcraft.yaml
softfloat/: README  defines.h  poly.cc  softfloat-round-pack.cc  softfloat.cpp  softfloat.h
softfloat-old/: fsincos.cc  softfloat.h
src/: .gitignore  a2065.cpp  a2091.cpp  akiko.cpp  akiko2.cpp  amax.cpp  ar.cpp  arcadia.cpp  aros.rom.cpp  audio.cpp  autoconf.cpp  barto_gdbserver.cpp  barto_gdbserver.h  blitter.cpp  blkdev.cpp  blkdev_cdimage.cpp  bsdsocket.cpp  build68k.cpp  casablanca.cpp  catweasel.cpp  cd32_fmv.cpp  cd32_fmv_genlock.cpp  cdtv.cpp  cdtvcr.cpp  cfgfile.cpp  cia.cpp  (+97 more)
src/ppc/pearpc/debug/: Makefile.am  Makefile.in  asm.cc  asm.h  debugger.cc  debugger.h  debugparse.c  debugparse.h  debugparse.y  debugtype.h  lex.c  lex.h  lex.l  parsehelper.c  parsehelper.h  ppcdis.cc  ppcdis.h  ppcopc.cc  ppcopc.h  stdfuncs.cc  stdfuncs.h  tracers.h  x86dis.cc  x86dis.h  x86opc.cc  x86opc.h
(+2957 files in other folders)
